log/build_2022-07-13_15-44-56/rlbike/stderr.log
/home/ptlab/.local/lib/python3.6/site-packages/setuptools/dist.py:726: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt)
/home/ptlab/.local/lib/python3.6/site-packages/setuptools/dist.py:726: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  % (opt, underscore_opt)
package init file 'rlbike/files/__init__.py' not found (or not a regular file)
/home/ptlab/.local/lib/python3.6/site-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/ptlab/ros2_rlbike/install/rlbike/lib/python3.6/site-packages/rlbike/train.py", line 474
    self.pub_iq(action_cmd).
                           ^
SyntaxError: invalid syntax

Sorry: IndentationError: unindent does not match any outer indentation level (PID_control.py, line 44)
